leading / on img

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
             <h1 class="description-header">Weather Analysis</h1>
             <hr class="description-hr"/>
-            <img class= "img-fluid" src="resources/map.png" alt="" id="description-image"/>
+            <img class= "img-fluid" src="/resources/map.png" alt="" id="description-image"/>
             <p>
 
             </p>
